objects/AllFieldTypesObject__c.object
<CustomObject>
    <description>Should have boolean, int, double, date, datetime, etc</description>
    <fields>
        <fullName>ABoolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABoolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AComboBox__c</fullName>
        <label>AComboBox</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>someComboBox1</fullName>
                </value>
                <value>
                    <fullName>someComboBox2</fullName>
                </value>
                <value>
                    <fullName>someComboBox3</fullName>
                </value>
                <value>
                    <fullName>someComboBox4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACurrency__c</fullName>
        <label>ACurrency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADateTime__c</fullName>
        <label>ADateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADouble__c</fullName>
        <label>ADouble</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AGeolocation__c</fullName>
        <label>AGeolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ALongTextArea__c</fullName>
        <label>ALongTextArea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMultiPickList__c</fullName>
        <label>AMultiPickList</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APercent__c</fullName>
        <label>APercent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APhone__c</fullName>
        <label>APhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APickList__c</fullName>
        <label>APickList</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARichTextArea__c</fullName>
        <label>ARichTextArea</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ATextArea__c</fullName>
        <label>ATextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AText__c</fullName>
        <label>AText</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATime__c</fullName>
        <label>ATime</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Adate__c</fullName>
        <label>Adate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AnEmail__c</fullName>
        <label>AnEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AnEncryptedTextArea__c</fullName>
        <label>AnEncryptedTextArea</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AnInt__c</fullName>
        <label>AnInt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aurl__c</fullName>
        <label>Aurl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SomeFieldToBeAddedWithTransDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SomeFieldToBeAddedWithTransDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>AllFieldTypesObject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AllFieldTypesObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AllFieldTypesObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>